<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_movie_des"
            tools:src="@mipmap/backdrop_loading"/>

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_movie_bd"
            android:layout_alignStart="@id/iv_movie_bd"
            android:layout_alignEnd="@id/iv_movie_bd"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="1dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/test_tv_title"/>

            <RatingBar
                android:id="@+id/rb_movie_star"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                tools:rating="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_container"
            android:layout_alignStart="@id/iv_movie_bd"
            android:layout_alignEnd="@id/iv_movie_bd"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="1dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/tv_movie_genre"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/test_tv_movie_genre"/>

            <TextView
                android:id="@+id/tv_movies_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/ic_date"
                tools:text="@string/test_tv_movie_date"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>