<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:srcCompat="@mipmap/poster_loading"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/tv_origin_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView"/>

    <TextView
        android:id="@+id/tv_origin_title"
        style="@style/DetailTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_language"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="TextView"/>

    <TextView
        android:id="@+id/tv_language"
        style="@style/DetailTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_vote_container"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_origin_title"
        tools:text="TextView"/>

    <LinearLayout
        android:id="@+id/ll_vote_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_language"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/iv_poster"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_genres"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_language">

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <RatingBar
            android:id="@+id/rb_rate"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_start"/>

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_start"
            android:maxEms="4"
            android:textColor="@android:color/holo_orange_light"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_genres"
        style="@style/DetailTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_runtime"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/ll_vote_container"
        tools:text="TextView"/>

    <TextView
        android:id="@+id/tv_runtime"
        style="@style/DetailTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres"
        tools:text="TextView"/>

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_favorite_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_white"
        tools:ignore="VectorDrawableCompat"/>

    <ImageView
        android:id="@+id/iv_line_overview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_line_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_line_overview"
        android:src="@drawable/bg_line_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_runtime"/>

    <TextView
        android:id="@+id/tv_overview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_line_overview"
        android:layout_marginTop="8dp"
        android:text="@string/tv_overview_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_line_overview"/>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl_overview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_overview_title">

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/bt_expand_or_shrink"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rectangle"
            android:text="@string/btExpand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"/>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_line_videos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_line_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_line_videos"
        android:src="@drawable/bg_line_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_overview_container"/>

    <TextView
        android:id="@+id/tv_videos_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_videos_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_line_videos"/>

    <TextView
        android:id="@+id/tv_empty_video"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video"
        app:layout_constraintTop_toTopOf="@id/iv_video"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/no_videos"/>

    <ImageView
        android:id="@+id/iv_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/iv_video"
        android:scaleType="center"
        android:src="@mipmap/ic_video_play"
        app:layout_constraintTop_toBottomOf="@+id/tv_videos_title"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/iv_line_reviews"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_line_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_line_reviews"
        android:src="@drawable/bg_line_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/iv_video"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/tv_reviews_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_reviews_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@+id/iv_line_reviews"
        tools:layout_editor_absoluteX="16dp"/>

    <LinearLayout
        android:id="@+id/ll_reviews_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_reviews_title"
        tools:layout_editor_absoluteX="16dp"/>

</android.support.constraint.ConstraintLayout>